search in products by Api
