# routes/api.php
@@ -34,6 +34,8 @@ Route::prefix('v1')->namespace('Api\V1')->group(function () {
     Route::get('products_by_brand/{id}', [\App\Http\Controllers\Api\V1\ProductsApiController::class, 'productsByBrand']);
 
     Route::get('product_details/{product}', [\App\Http\Controllers\Api\V1\ProductsApiController::class, 'productDetail']);
+
+    Route::post('search_product', [\App\Http\Controllers\Api\V1\ProductsApiController::class, 'searchProduct']);
 });
 
 Route::prefix('v1')->namespace('Api\V1')->middleware('auth:sanctum')->group(function () {
